tests/fixtures/invalid/none_mod_str.py
# Cannot modulo None and Str
x: None = None % "hello"
